--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 	path = lib/python/py-ubjson
 	url = https://github.com/fangq/py-ubjson.git
 	branch = bjdata
+[submodule "lib/python/pyjdata"]
+	path = lib/python/pyjdata
+	url = https://github.com/fangq/pyjdata.git
