--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/fangq/ubj.git
 [submodule "lib/cpp/json"]
 	path = lib/cpp/json
-	url = https://github.com/NeuroJSON/json.git
+	url = https://github.com/NeuroJSON/json
 [submodule "lib/python/pybj"]
 	path = lib/python/pybj
 	url = https://github.com/NeuroJSON/pybj.git
