add 1-page synosis, update all parsers to the latest git versions

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "lib/python/pyjdata"]
 	path = lib/python/pyjdata
 	url = https://github.com/NeuroJSON/pyjdata.git
+[submodule "lib/javascript/js-bjdata"]
+	path = lib/javascript/js-bjdata
+	url = https://github.com/NeuroJSON/js-bjdata.git
